added the streat separation and more layers
